# stock-predictor

./: .env.example  .gitignore  README.md  USER_GUIDE.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: daily_validation.yml  monthly_backtest.yml  monthly_ml_review.yml  nightly.yml  weekly_prediction.yml
apps/streamlit_app/: app.py
config/: backtest.yaml  model.yaml  sources.yaml  universe.yaml  universe_seed.csv
data/: app.db
predictions/: 2026-07-17.csv  2026-07-17.json
reports/: 2026-07-Improvement-Proposal.md  2026-07-ML-Review.md
reports/dashboard/: index.html
scripts/: generate_monthly_review.py  publish_weekly_predictions.py  run_backtests.py  run_daily_validation.py  run_nightly.ps1  run_phase1_smoke.py  run_prediction_diagnostics.py
tests/: conftest.py
tests/contract/: test_corporate_actions_yfinance_contract.py  test_fundamentals_yfinance_contract.py  test_macro_yfinance_contract.py  test_news_rss_contract.py  test_prices_yfinance_contract.py  test_universe_nse_contract.py
tests/integration/: test_determinism.py  test_nightly_flow.py  test_smoke_pipeline.py
tests/leakage/: test_no_lookahead.py
tests/unit/: test_alerts.py  test_api.py  test_backtest_engine.py  test_backtest_registry.py  test_backtest_significance.py  test_calibration.py  test_calibration_curve.py  test_connector_base.py  test_corporate_actions_ingestion.py  test_costs.py  test_cross_sectional.py  test_drift.py  test_ensemble.py  test_explain_factors.py  test_explain_registry.py  test_explain_shap.py  test_explain_signals.py  test_freshness.py  (+40 more)
(+3080 files in other folders)
